--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ p {
 }
 
 .hero-subtitle {
-  font-size: clamp(2.5rem, 6vw, 7rem);
+  font-size: clamp(2.5rem, 6vw, 6rem);
   line-height: clamp(3.2rem, 6.5vw, 7.5rem);
   margin: 1rem 0;
   animation: fade-in 1.5s 1s ease-out forwards;
@@ -595,7 +595,7 @@ p {
 .tech-stack h3 {
   margin-bottom: 3rem;
   text-align: center;
-  font-size: clamp(2rem, 3vw, 3.5rem);
+  font-size: clamp(2rem, 3vw, 3rem);
   color: #fff;
   letter-spacing: 1px;
   position: relative;
@@ -610,7 +610,7 @@ p {
 .project-icons figure {
   width: 100%;
   background-color: #222;
-  padding: 2rem;
+  padding-block: 2rem;
   border-radius: 10px;
   transition: box-shadow 0.5s, background-color 0.3s;
   display: flex;
@@ -626,7 +626,7 @@ p {
 
 .project-icons img {
   margin-bottom: 1rem;
-  max-width: 50%;
+  width: 30%;
   height: auto;
   transition: transform 0.3s;
 }
