--- a/css/style.css
+++ b/css/style.css
@@ -128,12 +128,14 @@ p {
 }
 
 .section-subtitle {
-  font-size: clamp(1rem, 2vw, 1.5rem);
+  font-size: clamp(1.2rem, 2vw, 1.5rem);
+  line-height: clamp(1.4rem, 3vw, 2.2rem);
   color: #fff;
   text-align: center;
   margin-top: 0.5rem;
   margin-bottom: 1rem;
 }
+
 
 .offscreen {
   position: relative;
@@ -496,7 +498,7 @@ p {
 }
 
 .about-info figcaption {
-  font-size: clamp(1.5rem, 3vw, 1.5rem);
+  font-size: clamp(1rem, 3vw, 1.5rem);
   margin-bottom: 1rem;
   color: #fff;
 } 
