Increase wrapper width on mobile < 500px

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -172,6 +172,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    width: 100%;
+  }
+
+  .projects-showcase .wrapper {
+    width: 100%;
   }
 
   .projects-showcase .section-title-div {
