--- a/css/style.css
+++ b/css/style.css
@@ -552,9 +552,13 @@ p {
   align-items: center;
   gap: 2rem;
   background-color: #1a1a1a;
-  padding: 2rem;
+  padding: 1rem;
   width: 100%;
   transition: transform 0.2s ease;
+}
+
+.project-info .compact-layout .project-paragraphs {
+  width: 60%;
 }
 
 .project-title {
@@ -566,6 +570,9 @@ p {
   width: 50%;
   padding: 1rem;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .projects-showcase .project-paragraphs p {
@@ -600,7 +607,7 @@ p {
 }
 
 .projects-showcase .phone-figure {
-  width: 20%;
+  width: 15%;
   padding-block: 2rem;
 }
 
