--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ p {
   width: 45%;
   padding: 0;
   margin-bottom: 1rem;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .projects-showcase figure a:focus {
@@ -616,10 +616,10 @@ p {
   transition: transform 0.15s;
 }
 
-.projects-showcase figure a:focus .project-img,
+/* .projects-showcase figure a:focus .project-img,
 .projects-showcase .project-img:hover {
-  transform: scale(1.5);
-}
+  transform: scale(1.2);
+} */
 
 /* Technologies Used */
 
