--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1182,37 +1182,17 @@
   }
 
   .js-projects-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
-    gap: 5rem;
-    padding: 2rem;
+    grid-template-columns: repeat(2, 1fr);
   }
   
   .projects-showcase {
     padding: 10px;
   }
 
-  .projects-showcase .section-title {
-  }
-
   .projects-showcase .wrapper {
-    max-width: 90%;
-  }
-
-  .project-section {
-    
   }
 
   .project-section .project-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 2rem;
-    background-color: #1a1a1a;
-    padding: 2rem;
-    width: 100%;
-    transition: transform 0.2s ease;
   }
 
   .project-title {
@@ -1222,23 +1202,13 @@
 }
 
 .projects-showcase figure {
-  width: 45%;
-  padding: 0;
-  margin-bottom: 1rem;
 }
 
 .projects-showcase figure img {
-  width: 100%;
-  height: auto;
 }
 
 .projects-showcase figure a:focus {
   outline: none;
-}
-
-.projects-showcase .phone-figure {
-  width: 20%;
-  padding-block: 2rem;
 }
 
 .projects-showcase .project-img {
@@ -1255,12 +1225,6 @@
   }
 
   .project-icons {
-  }
-  
-  .project-icons figure {
-    width: 100%;
-    padding: 1rem 3rem;
-    margin-bottom: 1rem;
   }
 
   .project-icons figure figcaption {
