--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ p {
 .about-info .about-and-skills-info {
   background-color: #1a1a1a;
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
+  grid-template-columns: 1fr 1.25fr;
   gap: 1rem;
   padding: 1rem;
   color: #fff;
@@ -439,10 +439,36 @@ p {
 }
 
 .about-info-content p {
-  font-size: clamp(1rem, 1.5vw, 1.7rem); /* Slightly larger */
+  font-size: clamp(1rem, 1.5vw, 1.6rem);
   line-height: 1.7;
   color: #e0e0e0;
 }
+
+.about-info-content ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.about-info-content ul li {
+  position: relative;
+  padding-left: 1.8rem;
+  font-size: clamp(1rem, 1.4vw, 1.4rem);
+  line-height: 1.6;
+  color: #cfcfcf;
+}
+
+.about-info-content ul li::before {
+  content: "✔";
+  position: absolute;
+  left: 0;
+  color: #31c654;
+  font-weight: bold;
+}
+
 
 /* About Info Skills Section */
 
